modified .gitignore